examples/negative/name_errors/L1/5_wrong_module.ob
MODULE WrongModule;

VAR x: INTEGER;

END Wrong.
